# sdl2-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.c  main.cpp
test/: CMakeLists.txt  egTest.cpp  testlib.cpp
