# add the executable
file(GLOB SOURCES CONFIGURE_DEPENDS "*.h" "*.cpp")
file(GLOB DATA_FILES CONFIGURE_DEPENDS "*.txt" "*.csv")

add_executable(${CMAKE_PROJECT_NAME} ${SOURCES})
add_library(${CMAKE_PROJECT_NAME}_lib SHARED STATIC ${SOURCES})

file(COPY ${DATA_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
